# sudoku_game

./: .gitignore  Cargo.toml  docker-compose.yml  index.html
src/: main.rs
src/game/: mod.rs
src/skins/: mod.rs
static/: index.html  script.js  sudoku_vk.wasm
