[package]
name = "sudoku_vk"
version = "0.1.0"
authors = ["artem <artem@webart-tech.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
sudoku = { git = "https://github.com/kislenko-artem/sudoku", branch = "master" }